Fixes for devices with a width lower than 370px. Disable zooming on mobile. Added MobileFriendly meta tag.

--- a/src/js/components/quiz/nav/quiz-nav.css
+++ b/src/js/components/quiz/nav/quiz-nav.css
@@ -33,3 +33,8 @@ ul li a.btn {
   top: 50%;
   margin-top: -0.7em; // put further to top than center
 }
+@media only screen and (max-width: 369px) {
+  .github-button {
+    display: none;
+  }
+}
